--- a/src/sections/01_Introduction.tex
+++ b/src/sections/01_Introduction.tex
@@ -42,7 +42,7 @@ The probability of finding the particle between $a$ and $b$ at time $t$ is:
 \begin{equation*}
     \int_a^b \underbrace{{\Psi(x,t)}^*\Psi(x,t)}_{|\Psi(x,t)|^2}\,dx
 \end{equation*}
-The probability density of the is given by
+The probability density is given by
 \begin{equation*}
     \rho(x,t) = |\Psi(x,t)|^2
 \end{equation*}
