--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -107,7 +107,7 @@ with:
 
 \ptitle{Group Velocity}
 
-A wavepacket consisting of infinitely many waves has a different \textit{group velocity} than the \textit{phase velocity} of the individual waves:
+A wavepacket consisting of infinitely many waves that have a different \textit{group velocity} than the \textit{phase velocity} of the individual waves:
 \noindent\begin{equation*}
     v_{group} = v_{classical} = 2v_{phase}
 \end{equation*}
@@ -118,7 +118,7 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
 
 
 \subsubsection{Infinite Square Well (ISW)}\label{ssec:ISW}
-A particle constrained ``walls'' behaves differently from a free particle. Given the potential i.e.\ constraint
+A particle constrained in ``walls'' behaves differently from a free particle. Given the potential i.e.\ constraint
 \noindent\begin{equation*}
     V(x)=\begin{cases}0,&0\le x\le a\\\infty,&\text{otherwise}\end{cases}
 \end{equation*}
@@ -220,11 +220,11 @@ Applied to the TISE we get
 \end{align*}
 This implies, if $\psi_n$ are solutions to the TISE with energy $E_n$, then $\widehat{a}_{+}\psi_n$/$\widehat{a}_{-}\psi_n$ are also solutions but with one more/less quantum of energy.
 \newpar{}
-At the bottom (one level above having no energy at all) of the energy potential function the steady state is given by
+At the bottom of the energy potential function the steady state is given by
 \begin{equation*}
     \widehat{a}_{-}\psi_0 = 0\psi_0 = 0
 \end{equation*}
-Which is a simple ODE that results in
+Which is a simple ODE that results in the solution for the fist state (one level above having no energy at all).
 \begin{equation*}
     \psi_0 = {\left(\frac{m\omega}{\pi\hbar}\right)}^{\frac{1}{4}}\exp\left(\frac{-m\omega}{2\hbar}x^2\right)
 \end{equation*}
@@ -587,7 +587,7 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
 \end{center}
 
 \subsection{Cubical Infinite Square Well}
-For the potential 
+For the potential
 \noindent\begin{equation*}
     V(x,y,z)=\begin{cases}0,&\text{if }x,y,z\text{ are all between }0\text{ and }a\\\infty,&\text{otherwise}\end{cases}
 \end{equation*}
