added rules for commutator

--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -68,7 +68,10 @@ If $\widehat{A}$ and $\widehat{B}$ do not commute, $\left[\widehat{A},\widehat{B
 \ptitle{Rules}
 
 \noindent\begin{align*}
-    \left[\widehat{A}\widehat{B},\widehat{C}\right] & =\widehat{A}\left[\widehat{B},\widehat{C}\right]+\left[\widehat{A},\widehat{C}\right]\widehat{B}
+    \left[\widehat{A}\widehat{B},\widehat{C}\right]  & =\widehat{A}\left[\widehat{B},\widehat{C}\right]+\left[\widehat{A},\widehat{C}\right]\widehat{B}    \\
+    \left[\widehat{A}+\widehat{B},\widehat{C}\right] & = \left[\widehat{A},\widehat{C}\right]+\left[\widehat{B},\widehat{C}\right]                         \\
+    \left[\widehat{A},\widehat{B}^2\right]           & = \left[\widehat{A},\widehat{B}\right] \widehat{B} - \widehat{B}\left[\widehat{B},\widehat{A}\right] \\
+                                                     & = \left[\widehat{A},\widehat{B}\right] \widehat{B} + \widehat{B}\left[\widehat{A},\widehat{B}\right]
 \end{align*}
 
 
