--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -1,7 +1,7 @@
 \section{Formalism}
 
 \subsection{Dirac Notation and Hilbert Spaces}
-Assuming the functions $\alpha, \beta$ are square integrable i.e.\ in $L_2$ (\textbf{Hilbert space}) $\mathcal{H}$,
+Assuming the functions $f,g$ are square integrable i.e.\ in $L_2$ (\textbf{Hilbert space}) $\mathcal{H}$,
 Dirac notation is used to simplify the notation of vectors, inner product (scalar product), expectation values etc. For the functions
 \begin{align*}
     f   & = \sum_n c_n f_n     \\
@@ -9,13 +9,13 @@ Dirac notation is used to simplify the notation of vectors, inner product (scala
 \end{align*}
 we define:
 \noindent\begin{align*}
-    |f\rangle           & := \begin{bmatrix}
-                                 c_1 & c_2 & \cdots & c_n
-                             \end{bmatrix}^T                               &  & \text{``ket''}              \\
-    \langle f|          & := \begin{bmatrix}
-                                 {c_1}^* & {c_2}^* & \cdots & {c_n}^*
-                             \end{bmatrix}                   &  & \text{``bra''}                            \\
-    \langle f|g \rangle & := \int_{-\infty}^{\infty} f^* g\; d \mathbf{r} \in L_2 &  & \text{inner product}
+    \left|f\right\rangle  & := \begin{bmatrix}
+                                   c_1 & c_2 & \cdots & c_n
+                               \end{bmatrix}^T                               &  & \text{``ket''}              \\
+    \left\langle f\right| & := \begin{bmatrix}
+                                   {c_1}^* & {c_2}^* & \cdots & {c_n}^*
+                               \end{bmatrix}                   &  & \text{``bra''}                            \\
+    \langle f|g \rangle   & := \int_{-\infty}^{\infty} f^* g\; d \mathbf{r} \in L_2 &  & \text{inner product}
 \end{align*}
 where ``ket'' and ``bra'' are \textbf{vectors} that represent the function $f$.
 
@@ -41,7 +41,7 @@ Observables are represented by hermitian operators.
 \subsubsection{Hermitian Operators}
 The expectation value of a observable is real and thus
 \noindent\begin{align*}
-    \langle Q\rangle                            & = {\langle Q\rangle}^*                                             \\
+    \langle Q\rangle                            & = {\langle Q\rangle}^*                                            \\
     \langle Q\rangle=\langle f|\hat{Q} g\rangle & = \langle \hat{Q}f|g\rangle={\langle Q\rangle}^*\quad \forall f,g
 \end{align*}
 Such an operator is called a hermitian operator (applying the operator to one or the other member of an inner product yields the same result). An operator \textbf{must} be hermitian for its observable to become real. These operators are \textbf{linear} if
@@ -76,7 +76,7 @@ In short: If a state fulfils the eigenvalue equation, every measurement will yie
           $\hat{Q}: \hat{H},\; q:E$.
 \end{itemize}
 
-\subsection{Eigenfunctions of a Hermitian Operator}
+\subsubsection{Eigenfunctions of a Hermitian Operator}
 Eigenfunctions of hermitian operators can either have a discrete or continuous spectrum.
 
 \newpar{}
@@ -212,8 +212,8 @@ An eigenfunction of the momentum operator must fulfil the following eigenvalue e
 
 \ptitle{Eigenfunctions}
 
-Plugging $\hat{p}=-i\hbar \frac{d}{dx}$ into the eigenvalue equation and solving the ODE yields waves with 
-$k=\frac{2 \pi}{\lambda}=\frac{p'}{\hbar}$ and wavelength $\lambda=\frac{2\pi\hbar}{p^{\prime}}=\frac{h}{p^{\prime}}$ 
+Plugging $\hat{p}=-i\hbar \frac{d}{dx}$ into the eigenvalue equation and solving the ODE yields waves with
+$k=\frac{2 \pi}{\lambda}=\frac{p'}{\hbar}$ and wavelength $\lambda=\frac{2\pi\hbar}{p^{\prime}}=\frac{h}{p^{\prime}}$
 (de Broglie formula!):
 \begin{equation*}
     f_{p^{\prime}}(x)=\frac{1}{\sqrt{2\pi\hbar}}\exp\left[\frac{ip^{\prime}x}{\hbar}\right]
