--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -108,7 +108,7 @@ If $\psi_n$ are solutions to $\hat{Q}\psi_n=q\psi_n$ then
           \end{equation*}
 \end{itemize}
 
-\subsection{Generalized Statistical Interpretation}
+\subsubsection{Generalized Statistical Interpretation}
 If the spectrum of $\hat{Q}$ is discrete and the state
 \begin{equation*}
     \Psi=\sum_n c_n f_n
@@ -230,9 +230,8 @@ As for $\hat{x}$ one can also show for $\hat{p}$ that
 
 
 \subsection{The Generalized Uncertainty Principle}
-\subsubsection{Compatible and Incompatible Observables}
 
-\ptitle{Compatible Observables}
+\subsubsection{Compatible Observables}
 
 \begin{itemize}
     \item The operators do commute: $[\widehat{A}, \widehat{B}] = 0$
@@ -246,7 +245,7 @@ As for $\hat{x}$ one can also show for $\hat{p}$ that
     \item Both measurements ($A$ and subsequent $A$ or $B$) are \textbf{deterministic}
 \end{itemize}
 
-\ptitle{Incompatible Observables}
+\subsubsection{Incompatible Observables}
 
 \begin{itemize}
     \item The operators don't commute: $[\widehat{A}, \widehat{B}] \neq 0$
@@ -271,7 +270,9 @@ As for $\hat{x}$ one can also show for $\hat{p}$ that
     \item Check the table of commutators in Appendix\ \ref{comm}
 \end{itemize}
 
-\subsubsection{General Uncertainty Principle (GUP) for Incompatible Operators}
+\newpar{}
+\ptitle{General Uncertainty Principle (GUP)}
+
 For any Observables $A$, $B$:
 \begin{equation*}
     \sigma_A^2\cdot\sigma_B^2\geqslant{\left(\frac1{2i}\langle[\hat{A},\hat{B}]\rangle\right)}^2
