--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -283,7 +283,7 @@ where
 \end{footnotesize}
 
 \paragraph{Specific Intervals}
-more on \textit{U}
+more on \textit{Useful Info Sheet}
 \begin{footnotesize}
     \noindent\begin{align*}
         %  & \int_0^{\infty} e^{-\lambda x}x^n dx                                               &  & =\frac{n!}{\lambda ^{n+1}},\quad \lambda >0                                       \\
