added stationary states, ISW and free particle

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -78,6 +78,7 @@ The expectation value of the energy of a particle in a general state is given by
     \item In contrast to the case of stationary states, probabilities and expectations of the general solution (a linear combination of stationary states) are in general \textbf{not} time-independent.
     \item As $c_n$ are independent on time, the probability to get a certain energy and $\langle H\rangle$ are constant in time (energy conservation).
 \end{itemize}
+
 \subsubsection{Free Particle}
 A \textit{free particle} propagates in space as a \textbf{wave packet} and its wavefunction is determined by
 \noindent\begin{equation*}
@@ -95,7 +96,7 @@ with:
     p & = \hbar k
 \end{align*}
 
-\textbf{Remark:}
+\textbf{Remarks:}
 
 \begin{itemize}
     \item A free particle can have any positive energy $E$.
