--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -93,7 +93,10 @@ If $\psi_n$ are solutions to $\hat{Q}\psi_n=q\psi_n$ then
     \item The eigenfunctions form a countable set (e.g.\ harmonic oscillator)
     \item Eigenfunctions with different eigenvalues are orthogonal
     \item Eigenfunctions with a discrete spectrum are within the Hilbert space $\mathcal{H}$, represent \textbf{physical} states and form a complete set.
-    \item $|\psi_n\rangle$ can be thought of as basis vectors
+    \item $|\psi_n\rangle$ can be thought of as basis vectors:
+        \noindent\begin{equation*}
+            \langle f_m|f_n\rangle=\delta_{mn}
+        \end{equation*}
 \end{itemize}
 
 \ptitle{Continuous Spectrum}
