--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -8,7 +8,7 @@
 \subsection{Probabilities}
 The probability of finding the particle between $a$ and $b$ at time $t$ is:
 \begin{equation*}
-    \int_a^b \underbrace{{\Psi(x,t)}^*\Psi(x,t)}_{|\Psi(x,t)|^2}\,dx =
+    \int_a^b \underbrace{{\Psi(x,t)}^*\Psi(x,t)}_{|\Psi(x,t)|^2}\,dx
 \end{equation*}
 \begin{align*}
     \int_{-\infty}^{\infty} |C\cdot \Psi(x,t)|^2 dx                                 = \langle C\Psi|C\Psi\rangle & = 1,\;\Psi\in L_2, \; C\in\mathbb{C} \\
@@ -147,8 +147,11 @@ If $\psi_n$ are solutions to $\hat{Q}\psi_n=q\psi_n$ then
 
 \begin{itemize}
     \item Eigenvalues are real
-    \item Eigenfunctions with different eigenvalues are orthogonal
     \item $\in \mathcal{H}$, represent \textbf{physical} states and form a complete set.
+    \item Eigenfunctions with different eigenvalues are orthogonal
+          \noindent\begin{equation*}
+              \langle f_m|f_n\rangle=\delta_{mn}
+          \end{equation*}
 \end{itemize}
 
 \newpar{}
@@ -260,10 +263,141 @@ where
     \item If they commute, $Q$ is a conserved quantity.
 \end{itemize}
 
+\newcol{}
 \section{Schroedinger Equation}
+\noindent\begin{equation*}
+    i\hbar \frac{\partial \Psi(x,t)}{\partial t}           = \underbrace{- \frac{\hbar^2}{2m} \frac{\partial^2 \Psi(x,t)}{\partial x^2}}_{E_{kin}} + \underbrace{V(x,t)\Psi(x,t)}_{E_{pot}}
+\end{equation*}
 \subsection{Stationary States}
+\noindent\begin{align*}
+    \Psi_n(x,t)                                                        & = \psi_n(x)\varphi_n(t)                                                                                         \\
+    \underbrace{i\hbar\frac1\varphi\frac{d\varphi}{dt}}_{\varphi_n(t)} & =\underbrace{-\frac{\hbar^2}{2m}\frac1\psi\frac{d^2\psi}{dx^2}+V}_{\psi_n (x)} = \underbrace{E}_{\text{const.}}
+\end{align*}
+
+\ptitle{Phase Factor}
+\noindent\begin{equation*}
+    \varphi_n(t)       =\exp\left[\frac{-iE_n t}{\hbar}\right], \qquad E_n = \frac{\hbar^2 k_n^2}{2m}
+\end{equation*}
+
+\ptitle{TISE}
+\noindent\begin{align*}
+    \Bigl[\overbrace{-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}}^{E_{kin}}+ \overbrace{V(x)}^{E_{pot}}\Bigr]\psi & = E\psi \\
+    \widehat{H}\psi                                                                                       & = E\psi
+\end{align*}
+
+\newpar{}
+Assuming $V(x) = 0$:
+\noindent\begin{align*}
+    \psi(x) & =A\sin(kx)+B\cos(kx)                                               &  & \text{standing wave (ISW)} \\
+    \psi(x) & =Ce^{ikx}+De^{-ikx}                                                &  & \text{free particle}       \\
+    k       & =\sqrt{\frac{2mE}{\hbar^{2}}}=\frac{p}{\hbar}=\frac{2\pi}{\lambda} &  & \text{wave number}
+\end{align*}
+
+\ptitle{Hamiltonian}
+
+$\widehat{H}$ is the Hamiltonian operator representing \textbf{total energy}:
+\noindent\begin{equation*}
+    \langle H\rangle = E,\quad{\sigma_H}^2 = 0, \quad \langle p\rangle = 0
+\end{equation*}
+
+\newpar{}
+
+\textbf{Remarks:}
+\begin{itemize}
+    \item $|\Psi(x,t)|^2 = |\psi(x)|^2$ (prob.\ density and expectation values are time-independent):
+          \noindent\begin{equation*}
+              \langle Q\rangle=\int_{-\infty}^\infty\psi^*(x)\widehat{Q}\psi(x)dx
+          \end{equation*}
+\end{itemize}
+
+\subsubsection{Combining the Separable Solutions}
+A particle/wave in a general state $\Psi$ is in a superposition of stationary states $\psi_n$ with energy $E_n$ and probability $|c_n|^2$:
+\noindent\begin{equation*}
+    \Psi(x,t) =\sum_{n=1}^\infty c_n\psi_n(x) \underbrace{\exp\left[\frac{-iE_n t}{\hbar}\right]}_{\varphi_n(t)}=\sum_{n=1}^\infty c_n\Psi_n(x,t)
+\end{equation*}
+
+\noindent\begin{equation*}
+    \langle H\rangle=\sum_{n=1}^\infty|c_n|^2\cdot \underbrace{E_n}_{\textsf{Eigenvalue}} \qquad \sum_{n=1}^\infty|c_n|^2 =1
+\end{equation*}
+
+\ptitle{Remarks:}
+\begin{itemize}
+    \item A Measurement will \textbf{collapse} $\Psi$ into one of the $\Psi_n$'s.
+    \item Probabilities and expectations of the general solution are in general \textbf{not} time-independent.
+    \item As $c_n$ are independent of time, the probability to get a certain energy and $\langle H\rangle$ are constant in time (energy conservation).
+\end{itemize}
+
 \subsection{Free Particle}
+A \textit{free particle} propagates in space as a \textbf{wave packet} and its wavefunction is determined by
+\noindent\begin{equation*}
+    \Psi_{wp}(x,t)=\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{\infty}g(k)\exp\Biggl[i\Biggl(kx- \underbrace{\frac{\hbar k^{2}}{2m}}_{\omega}t\Biggr)\Biggr]dk
+\end{equation*}
+
+\noindent\begin{equation*}
+    g(k)=\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{\infty}\Psi_{wp}(x,0)e^{-ikx}dx
+\end{equation*}
+\begin{equation*}
+    k  = \frac{2\pi}{\lambda}\qquad p  = \hbar k
+\end{equation*}
+
+\textbf{Remarks:}
+
+\begin{itemize}
+    \item A free particle can have any positive energy $E$.
+    \item There is no free particle with a definite energy.
+          % \item $\frac{1}{\sqrt{2\pi}}$ plays the role of $c_n$ from the discrete superposition case.
+    \item Separable solutions do not represent physical states, therefore $\notin$ Hilbert space.
+    \item The particle carries a range of $k$
+\end{itemize}
+
+\ptitle{Group Velocity}
+
+A wavepacket consisting of infinitely many waves has a different \textit{group velocity} than the \textit{phase velocity} of the individual waves:
+\noindent\begin{equation*}
+    v_{group} = v_{classical} = 2v_{phase}
+\end{equation*}
+
+\begin{center}
+    \includegraphics[width = 0.4\linewidth]{group_vel.png}
+\end{center}
+
 \subsection{ISW}
+\noindent\begin{equation*}
+    V(x)=\begin{cases}0,&0\le x\le a\\\infty,&\text{otherwise}\end{cases}
+\end{equation*}
+\noindent\begin{align*}
+    \psi_{n}(x) & =\sqrt{\frac{2}{a}}\sin\left(\frac{n\pi}{a}x\right)                      &  & \text{standing wave} \\
+    E_{n}       & =\frac{\hbar^{2}k_{n}^{2}}{2m}=\frac{n^{2}\pi^{2}\hbar^{2}}{2ma^{2}} > 0 &  & \text{quantized}
+\end{align*}
+
+\begin{center}
+    \includegraphics[width = 0.4\linewidth]{ISW.png}
+\end{center}
+
+\textbf{Remarks:}
+\begin{itemize}
+    \item Solutions alternate between \textit{odd} and \textit{even} starting from $\psi_1$: \textit{odd}
+    \item $\psi_{n+1}$ has one node (zero-crossing) more than $\psi_n$
+    \item $\psi_n$ are eigenfunctions/vectors and $E_n$ are the corresponding eigenvalues
+    \item $\psi_n$ are orthonormal base functions (complete):
+          \noindent\begin{equation*}
+              \int_{-\infty}^{\infty} \psi_m^*\psi_n\; dx =\langle \psi_m|\psi_n\rangle= \delta_{mn}
+          \end{equation*}
+          % \item \textbf{Dirichlet's theorem}: any function can be described by a fourier series
+\end{itemize}
+
+\ptitle{General Solution}
+\noindent\begin{align*}
+    \Psi(x,t) & =\sum_{n=1}^{\infty}c_{n} \overbrace{\underbrace{\sqrt{\frac{2}{a}}\sin\left(\frac{n\pi}{a}x\right)}_{\psi_n} \underbrace{\exp\left[-i\frac{n^{2}\pi^{2}\hbar}{2ma^{2}}t\right]}_{\varphi_n}}^{\Psi_n} \\
+    c_n       & =\langle \psi_n|\Psi(x,0)\rangle = \sqrt{\frac{2}{a}}\int_0^a\sin\left(\frac{n\pi}{a}x\right)\Psi(x,0)dx
+\end{align*}
+
+\ptitle{Expectation Values}
+\noindent\begin{align*}
+    \langle \varphi_n|x^2\varphi_m\rangle & = \frac{2a^2}{\pi^2}\left(\frac{{(-1)}^{n-m}}{{(n-m)}^2}-\frac{{(-1)}^{n+m}}{{(n+m)}^2}\right) \\
+    \langle \varphi_n|x^2\varphi_n\rangle & = a^2\left(\frac{1}{3} -\frac{1}{2{(n\pi)}^2}\right)
+\end{align*}
+
 \subsection{Harmonic Oscillator}
 \subsection{Finite Potentials}
 
