--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -399,6 +399,73 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
 \end{align*}
 
 \subsection{Harmonic Oscillator}
+\begin{equation*}
+    V(x) = \frac{1}{2}k x^2 = \frac{1}{2}m \omega^2 x^2 \qquad \text{with} \quad \omega = \sqrt{\frac{k}{m}}
+\end{equation*}
+
+\ptitle{TISE}
+\noindent\begin{equation*}
+    \underbrace{\frac{-\hbar^2}{2m}\frac{d^2\psi}{dx^2} + \frac{1}{2}m \omega^2}_{\widehat{H}} x^2 \psi  = E\psi
+\end{equation*}
+
+\ptitle{Ladder Operators}
+\begin{align*}
+    \widehat{a}_{+} & = \frac{1}{\sqrt{2\hbar m \omega}}\left(-i\widehat{p}+m\omega\widehat{x}\right) &  & \text{raising operator}  \\
+    \widehat{a}_{-} & = \frac{1}{\sqrt{2\hbar m \omega}}\left(+i\widehat{p}+m\omega\widehat{x}\right) &  & \text{lowering operator}
+\end{align*}
+\noindent\begin{gather*}
+    \widehat{a}_{-}\widehat{a}_{+}=\frac{1}{\hbar\omega}\widehat{H}+\frac{1}{2} \quad\quad \widehat{a}_{+}\widehat{a}_{-}=\frac{1}{\hbar\omega}\widehat{H}-\frac{1}{2} \\
+    \widehat{a}_{+} + \widehat{a}_{-} = \sqrt{\frac{2m\omega}{\hbar}} \widehat{x} \\
+    \left[\widehat{a}_{-},\widehat{a}_{+}\right] = 1
+\end{gather*}
+
+\ptitle{Solution to TISE}
+\noindent\begin{align*}
+    \psi_0 & = {\left(\frac{m\omega}{\pi\hbar}\right)}^{\frac{1}{4}}\exp\left(\frac{-m\omega}{2\hbar}x^2\right) & E_0 & = \frac{1}{2}\hbar\omega     \\
+    \psi_n & = \frac{1}{\sqrt{n!}}{\left(\widehat{a}_{+}\right)}^n \psi_0                                       & E_n & = (n+\frac{1}{2})\hbar\omega \\
+\end{align*}
+
+\begin{align*}
+    \widehat{a}_{+}\psi_n & = \sqrt{n+1}\psi_{n+1} \\
+    \widehat{a}_{-}\psi_n & = \sqrt{n}\psi_{n-1}
+\end{align*}
+\includegraphics[width=\linewidth]{harmonic_oscillator.png}
+
+\ptitle{Hermite Polynomial Form} (\textit{Useful Info Sheet})
+
+{\tiny\noindent\begin{align*}
+        H_1 & = 2x                                         &  & \text{odd}  \\
+        H_2 & = 4x^2-2                                     &  & \text{even} \\
+        H_3 & = 8x^3-12x                                   &  & \text{odd}  \\
+        H_4 & = 16x^4-48x^2+12                             &  & \text{even} \\
+        H_n & = {(-1)}^n e^{x^2} \frac{d^n}{dx^n} e^{-x^2}
+    \end{align*}
+}
+
+\ptitle{Remarks:}
+\begin{itemize}
+    \item The energy is quantized.
+    \item $n$ is the number of energy quanta in the oscillator
+    \item $\widehat{N} \equiv \widehat{a}_{+}\widehat{a}_{-} = $ number operator because $\left<N\right> = n$ for $\psi_n$
+    \item The lowest state $\psi_0$ has the \textbf{zero point energy}. Even if all the energy is removed from the system (zero Kelvin).
+    \item Solutions alter between even and odd because the potential is \textbf{symmetric}.
+    \item $\psi_{n+1}$ has one node more than $\psi_n$
+    \item $\psi_n$ are mutually orthogonal + complete (form a basis).
+    \item Soft boundary conditions - finite potential at the boundary/barrier.
+    \item Negative kinetic energy outside the potential parabola.
+    \item The spacing between two energy levels spreads out for large $k$ as $\omega=\sqrt{\frac{k}{m}}$.
+\end{itemize}
+
+\ptitle{Specific Expectation Values}
+\noindent\begin{align*}
+    \left\langle x \right\rangle _n   & = 0                                                                                                    & \forall n \in \mathbb{N}                                     \\
+    \left\langle x^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\frac{\hbar}{m\omega}                                                      & \forall n \in \mathbb{N}                                     \\
+    \left\langle p \right\rangle _n   & = 0                                                                                                    & \forall n \in \mathbb{N}                                     \\
+    \left\langle p^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\hbar m\omega                                                              & \forall n \in \mathbb{N}                                     \\
+    \left\langle T \right\rangle _n   & = \frac{\left\langle p^2 \right\rangle}{2m} =  \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)        & \langle E\rangle_n =  \langle T\rangle_n +\langle V\rangle_n \\
+    \left\langle V \right\rangle _n   & = \frac{m\omega^2}{2}\left\langle x^2 \right\rangle = \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)
+\end{align*}
+
 \subsection{Finite Potentials}
 
 \section{Tables}
