--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -297,7 +297,7 @@ For any potential, the solution to the SE will either be a combination of \texti
         E < V(\pm \infty) & \text{bound state}
     \end{cases}
 \end{equation*}
-\textbf{Remarks}
+\textbf{Remarks}:
 
 \begin{itemize}
     \item The total energy of the particle is conserved i.e.\ if the potential $V$ increases, the wavelength $\lambda$ (and so the velocity!) decreases and vice versa.
