--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -281,8 +281,7 @@ where
 
 \ptitle{TISE}
 \noindent\begin{align*}
-    \Bigl[\overbrace{-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}}^{E_{kin}}+ \overbrace{V(x)}^{E_{pot}}\Bigr]\psi & = E\psi \\
-    \widehat{H}\psi                                                                                       & = E\psi
+    \widehat{H}\psi  = \Bigl[\overbrace{-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}}^{E_{kin}}+ \overbrace{V(x)}^{E_{pot}}\Bigr]\psi & = E\psi \\
 \end{align*}
 
 \newpar{}
@@ -460,12 +459,11 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
 
 \ptitle{Specific Expectation Values}
 \noindent\begin{align*}
-    \left\langle x \right\rangle _n   & = 0                                                                                                    & \forall n \in \mathbb{N}                                     \\
-    \left\langle x^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\frac{\hbar}{m\omega}                                                      & \forall n \in \mathbb{N}                                     \\
-    \left\langle p \right\rangle _n   & = 0                                                                                                    & \forall n \in \mathbb{N}                                     \\
-    \left\langle p^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\hbar m\omega                                                              & \forall n \in \mathbb{N}                                     \\
-    \left\langle T \right\rangle _n   & = \frac{\left\langle p^2 \right\rangle}{2m} =  \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)        & \langle E\rangle_n =  \langle T\rangle_n +\langle V\rangle_n \\
-    \left\langle V \right\rangle _n   & = \frac{m\omega^2}{2}\left\langle x^2 \right\rangle = \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)
+    \left\langle x \right\rangle _n & = 0 & \left\langle x^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\frac{\hbar}{m\omega} & \forall n \in \mathbb{N} \\
+    \left\langle p \right\rangle _n & = 0 & \left\langle p^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\hbar m\omega         & \forall n \in \mathbb{N}
+\end{align*}
+\noindent\begin{align*}\left\langle T \right\rangle _n & = \frac{\left\langle p^2 \right\rangle}{2m} =  \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)        & \langle E\rangle_n =  \langle T\rangle_n +\langle V\rangle_n \\
+              \left\langle V \right\rangle _n & = \frac{m\omega^2}{2}\left\langle x^2 \right\rangle = \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)
 \end{align*}
 
 \subsection{Finite Potentials}
